--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ html, body {
     word-spacing: 10px;
 }
 
-.main :nth-child(2){
-    margin-bottom: 10px;
+.main .text{
     font-size: 30px;
+    padding-bottom: 10px;
 }
 #game-board{
     background-color: rgb(39, 155, 39);
@@ -51,7 +51,7 @@ html, body {
 .nav{
     background-color: rgb(59, 180, 59);
     width: 100%;
-    height: 60px;
+    height: 55px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -60,14 +60,14 @@ html, body {
 
 .nav span{
     font-size: 30px;
-    padding: 0 25px;
     text-align: center;
+    padding: 0 25px;
 }
 
 .board-grid{
     background-color: rgb(39, 155, 39);
     width: 600px;
-    height: 540px;
+    height: 500px;
     display: grid;
     grid-template: repeat(15, 1fr)/repeat(15, 1fr);
     
@@ -92,4 +92,59 @@ html, body {
     background-image: url(Graphics/body_horizontal.png);
     background-position: center;
     background-size: cover;
+}
+
+.controller{
+    display: none;
+}
+
+
+
+
+@media (max-width:760px) {
+    #game-board{
+        width:400px;
+        height:400px ;
+    }
+    .board-grid{
+        width: 400px;
+        height: 300px;
+    }
+    .nav{
+        width: 100%;
+        height: 55px;
+    }
+    .main span{
+        font-size: 30px;
+        color: white;
+        word-spacing: 10px;
+    }
+    
+    .text{
+        font-size: 10px;
+    }
+
+    .nav span{
+        font-size: 20px;
+        text-align: center;
+        padding: 0 25px;
+    }
+    .controller{
+        background-color: rgb(59, 180, 59);
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: white;
+    }
+    .controller i{
+        display: flex;
+        border-right: 2px rgb(39, 155, 39) solid;
+        text-align: center;
+        font-size: 30px;
+        cursor: pointer;
+        padding: 6px 32px;
+        
+    }
 }
