--- a/style.css
+++ b/style.css
@@ -103,25 +103,25 @@ html, body {
 
 @media (max-width:760px) {
     #game-board{
-        width:400px;
-        height:400px ;
+        width:380px;
+        height:380px ;
     }
     .board-grid{
-        width: 400px;
-        height: 300px;
+        width: 380px;
+        height: 280px;
     }
     .nav{
         width: 100%;
         height: 55px;
     }
     .main span{
-        font-size: 30px;
+        font-size: 27px;
         color: white;
-        word-spacing: 10px;
+        word-spacing: 8px;
     }
     
-    .text{
-        font-size: 10px;
+    .main .text{
+        font-size: 22px;
     }
 
     .nav span{
